Import of SULLR/Net-SSLGlue-0.6 from CPAN.
gitpan-cpan-distribution: Net-SSLGlue
gitpan-cpan-version:      0.6
gitpan-cpan-path:         SULLR/Net-SSLGlue-0.6.tar.gz
gitpan-cpan-author:       SULLR
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.6 2011/05/02
+fixed english, thanks to dom, https://rt.cpan.org/Ticket/Display.html?id=46284
+
 0.5 2011/02/03
 documentation fixes: http://rt.cpan.org/Ticket/Display.html?id=65258
 
